# groceries_scraper

./: .gitignore  README.md  pyproject.toml
tests/: test_sample.py
